# CMSMET

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: cmsmet_v1.json
outputs/paper_results/: experiment_results.json  paper_table.tex  paper_table.txt
outputs/paper_results_e2e/: e2e_paper_table.tex  e2e_paper_table.txt  e2e_results.json
scripts/: extract_music_embeddings_mert.py  extract_speech_embeddings.py  generate_e2e_figures.py  generate_paper_figures.py  run_paper_experiment.py  run_paper_experiment_e2e.py
src/cmsmet/: __init__.py  config.py
src/cmsmet/data/: __init__.py  cached_embeddings.py  data_pairers.py  deam.py  deam_fixed.py  iemocap.py  iemocap_fixed.py
src/cmsmet/evaluation/: evaluator.py  metrics.py
src/cmsmet/models/: classifiers.py  encoders.py  losses.py
src/cmsmet/training/: checkpoint_manager.py  contrastive_trainer.py  emotion_classifier_trainer.py  fair_comparison.py  trainer.py
